<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".views.activities.CreateSurveyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/create_survey"
            app:titleTextColor="@color/text_on_primary"
            android:background="@color/primary"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/text_on_primary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_md">

            <!-- Metadata Section -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metadata"
                android:textAppearance="@style/TextAppearance.Canopy.Title"
                android:textColor="@color/primary"
                android:layout_marginBottom="@dimen/spacing_md"/>

            <!-- Survey Type -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutSurveyType"
                style="@style/Widget.Canopy.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/survey_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editSurveyType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Survey Date -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutSurveyDate"
                style="@style/Widget.Canopy.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:hint="@string/survey_date"
                app:endIconMode="custom"
                app:endIconDrawable="@android:drawable/ic_menu_my_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editSurveyDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Survey Time -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutSurveyTime"
                style="@style/Widget.Canopy.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:hint="@string/survey_time"
                app:endIconMode="custom"
                app:endIconDrawable="@android:drawable/ic_menu_recent_history">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editSurveyTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Weather Condition -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutWeatherCondition"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:hint="@string/weather_condition">

                <AutoCompleteTextView
                    android:id="@+id/dropdownWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Survey Method -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutSurveyMethod"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:hint="@string/survey_method">

                <AutoCompleteTextView
                    android:id="@+id/dropdownMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- GPS Coordinates Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:orientation="horizontal">

                <!-- Latitude -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutLatitude"
                    style="@style/Widget.Canopy.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/spacing_sm"
                    android:hint="@string/latitude">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editLatitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal|numberSigned"/>

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Longitude -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutLongitude"
                    style="@style/Widget.Canopy.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/spacing_sm"
                    android:hint="@string/longitude">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editLongitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal|numberSigned"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!-- Notes -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutNotes"
                style="@style/Widget.Canopy.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:hint="@string/notes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:gravity="top"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Section Toggles -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:text="Data Sections"
                android:textAppearance="@style/TextAppearance.Canopy.Title"
                android:textColor="@color/primary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xs"
                android:text="Select at least one section to include"
                android:textAppearance="@style/TextAppearance.Canopy.Caption"/>

            <!-- Section Checkboxes -->
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkTopographic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="@string/topographic"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkVegetation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vegetation"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkSoil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/soil"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkWater"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/water"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBiodiversity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/biodiversity"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkHazard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hazard"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkInfrastructure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infrastructure"/>

            <!-- Topographic Section (expandable) -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardTopographic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                app:cardCornerRadius="@dimen/card_corner_radius"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_md">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/topographic"
                        android:textAppearance="@style/TextAppearance.Canopy.Subtitle"
                        android:textColor="@color/primary"/>

                    <!-- Elevation -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutElevation"
                        style="@style/Widget.Canopy.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_sm"
                        android:hint="Elevation (m)"
                        app:suffixText="m">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editElevation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Slope Gradient -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutSlopeGradient"
                        style="@style/Widget.Canopy.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_sm"
                        android:hint="Slope Gradient (°)"
                        app:suffixText="°">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editSlopeGradient"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Land Use Dropdown -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutLandUse"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_sm"
                        android:hint="Land Use">

                        <AutoCompleteTextView
                            android:id="@+id/dropdownLandUse"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Land Cover Description -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutLandCover"
                        style="@style/Widget.Canopy.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_sm"
                        android:hint="Land Cover Description">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editLandCover"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:minLines="2"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- More section cards would go here (vegetation, soil, etc.) -->
            <!-- For brevity, I'll show the pattern - you can replicate for other sections -->

            <!-- Error Message -->
            <TextView
                android:id="@+id/textError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:textColor="@color/error"
                android:textAppearance="@style/TextAppearance.Canopy.Caption"
                android:visibility="gone"/>

            <!-- Save Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSave"
                style="@style/Widget.Canopy.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:layout_marginBottom="@dimen/spacing_xl"
                android:text="@string/save"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- Loading Overlay -->
    <FrameLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>